--- a/views/login.ejs
+++ b/views/login.ejs
@@ -6,7 +6,7 @@ body { font-family: sans-serif; font-size: 80% }
 </style>
 
 <div style="width: 400px">
-<form action="/login" method="post">
+<form action="<%= sitebase %>/login" method="post">
 <h3 style="border-bottom: 1px dotted grey">Login</h3>
 	<div style="float:right">
     <div>
