--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,3 +1,6 @@
+<% if (banner) { %>
+<%= banner %>
+<% } %>
 <% if (message) { %>
 <p><%= message %></p>
 <% } %>
@@ -26,4 +29,3 @@ body { font-family: sans-serif; font-size: 80% }
 </form>
 </div>
 
-<p><small>demo - demo:demo</small></p>
