--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
 <%= banner %>
 <% } %>
 <div class="ui form segment">
-  <form method="post">
+  <form method="post" action="login">
     <div class="field">
       <label>Username</label>
       <div class="ui left labeled icon input">
