--- a/views/login.ejs
+++ b/views/login.ejs
@@ -26,7 +26,7 @@
         <input id="password" name="password" type="password">
         <i class="lock icon"></i>
         <div class="ui corner label">
-          <i class="icon asterisk"></i>
+          <i class="icon lock"></i>
         </div>
       </div>
     </div>
