--- a/contrib/__wm/dashboard.css
+++ b/contrib/__wm/dashboard.css
@@ -1,6 +1,6 @@
 body { font-family: sans-serif; border: 0px; padding: 0px; margin: 0px }
 
-.active.visualization.sidebar {
+.active.dashboard.sidebar {
   top: 40% !important;
   height: 65% !important;
   margin-top: 0px !important;
