adding user dashboard (in progress)

--- a/contrib/__wm/dashboard.css
+++ b/contrib/__wm/dashboard.css
@@ -62,9 +62,8 @@ a {
 }
 
 /* file upload */
-#holder.hover { border: 4px dashed #0c0; }
-#holder img { display: block; margin: 10px auto; }
-#holder p { margin: 10px; font-size: 14px; }
+.holder.hover { border: 4px dashed #0c0; }
+.holder img { display: block; margin: 10px auto; }
 progress { width: 100%; } 
 progress:after { content: '%'; }
 .fail { background: #c00; padding: 2px; color: #fff; }
