--- a/contrib/__wm/dashboard.css
+++ b/contrib/__wm/dashboard.css
@@ -81,44 +81,36 @@ a:active {text-decoration:underline;}
 
 // browse annotations treemap
 
-.treemap #browes {
-  background: #ddd;
+.treemap .chart {
+  display: block;
+  margin: auto;
+  margin-top: 60px;
+  font-size: 11px;
 }
 
-text {
+.treemap  rect {
+  stroke: #eee;
+  fill: #aaa;
+  fill-opacity: .8;
+}
+
+.treemap  rect.parent {
+  cursor: pointer;
+  fill: steelblue;
+}
+
+.treemap  text {
   pointer-events: none;
 }
 
-.grandparent text {
-  font-weight: bold;
-}
-
-.treemap rect {
-  fill: none;
-  stroke: #fff;
-}
-
-.treemap rect.parent, .grandparent rect {
-  stroke-width: 2px;
-}
-
-.treemap .grandparent rect {
-  fill: orange;
-}
-
-.treemap .grandparent:hover rect {
-  fill: #ee9700;
-}
-
-.treemap .children rect.parent, .grandparent rect {
-  cursor: pointer;
-}
-
-.treemap .children rect.parent {
-  fill: #bbb;
-  fill-opacity: .5;
-}
-
-.treemap .children:hover rect.child {
-  fill: #bbb;
+.treemap div.tooltip {   
+  position: absolute;           
+  width: 10em;;                  
+  height: 3em;;                 
+  padding: 2px;             
+  font: 12px sans-serif;        
+  background: white;   
+  border: 0px;      
+  pointer-events: none;         
+  z-index: 999;
 }
