--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="lib/semantic-ui/build/packaged/css/semantic.css">
+<link rel="stylesheet" type="text/css" href="/__wm/libs.css">
 </head>
 <body>
 
