--- a/web/views/login.ejs
+++ b/web/views/login.ejs
@@ -1,7 +1,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<link rel="stylesheet" type="text/css" href="/__wm/libs.css">
+<link rel="stylesheet" type="text/css" href="libs.css">
 </head>
 <body>
 
@@ -40,4 +40,3 @@
 </div>
 </body>
 </html>
-
