direct to login, add global clientID

--- a/web/views/memberjs.ejs
+++ b/web/views/memberjs.ejs
@@ -3,6 +3,7 @@
 <% } else { %>
   var senseBase = {
     user : '<%= user.username %>',
+    clientID: '<%= clientID %>' %>,
     homepage : '<%= homepage %>',
     isScraper : <%= user.type == 'Scraper' %>
   }
