fixing jqcron includes

--- a/web/dashboard/includes/search.html
+++ b/web/dashboard/includes/search.html
@@ -46,7 +46,7 @@
     <div class="six wide field">
       <h3>Persistent search</h3>
       <div class="inline field">
-        <input type="checkbox" id="scheduleSearch" /> Schedule <span id="scheduleInput" style="display: none"><input class="cron search" style="display: none" /></span>
+        <input type="checkbox" id="scheduleSearch" /> <label for="scheduleSearch">Schedule</label> <span id="scheduleInput" style="display: none"><input class="cron search" style="display: none" /></span>
       </div>
       <div class="two inline fields">
         <label for="searchSave">Name</label>
