adding tree view

--- a/web/dashboard/includes/query.html
+++ b/web/dashboard/includes/query.html
@@ -53,7 +53,12 @@
     <div class="three wide function field">
       <div class="field">
         <label for="browseNav">Navigator</label>
-        <select id="browseNav"><option value="">None</option><option value="cluster">Cluster</option><option value="annotations">Annotations</option></select>
+        <select id="browseNav">
+          <option value="">None</option>
+          <option value="tree">Tree</option>
+          <option value="annotations">Annotations</option>
+          <option value="cluster">Cluster</option>
+        </select>
       </div>
       <div class="field">
         <button class="ui blue mini query submit button" id="queryForm">Update</button> &nbsp;
