cleaning up form

--- a/web/dashboard/includes/query.html
+++ b/web/dashboard/includes/query.html
@@ -24,13 +24,15 @@
         </select>
       </div>
     </div>
-    <div class="two wide function field">
+    <div class="one wide function field">
+      <div style="float:right" class="inline field">
       <label for="fromDate">From</label>
-      <input id="fromDate" />
+      <input id="fromDate" style="width: 6em" />
     </div>
-    <div class="two wide function field field">
+      <div style="float:right" class="inline field">
       <label for="toDate">To</label>
-      <input id="toDate" />
+      <input id="toDate" style="width: 6em" />
+    </div>
     </div>
   </div>
 </form>
