support request by annotator

--- a/web/dashboard/includes/search.html
+++ b/web/dashboard/includes/search.html
@@ -3,7 +3,7 @@
     <div class="four wide function field">
       <div class="field">
         <label for="searchTeam">Members</h3>
-        <select multiple class="searching team container" style="width: 100%" id="searchTeam"></select>
+        <select multiple class="team searcher container" style="width: 100%" id="searchTeam"></select>
       </div>
       <div class="field">
         <label for="searchCategories">Apply categories</label>
