--- a/web/dashboard/includes/search.html
+++ b/web/dashboard/includes/search.html
@@ -1,4 +1,4 @@
-<div class="ui function searching form" style="padding: 4px">
+<div class="ui function searcher form" style="padding: 4px">
   <div class="fields">
     <div class="four wide function field">
       <div class="field">
