--- a/web/dashboard/dashboard.css
+++ b/web/dashboard/dashboard.css
@@ -1,4 +1,9 @@
-body { font-family: sans-serif; border: 0px; padding: 0px; margin: 0px }
+body {
+  font-family: "Open Sans", sans-serif;
+  border: 0px;
+  padding: 0px;
+  margin: 0px
+}
 
 .active.dashboard.sidebar {
   top: 40% !important;
@@ -118,7 +123,6 @@ div.tooltip {
   width: 10em;;
   height: 3em;;
   padding: 2px;
-  font: "Open Sans", sans-serif;
 
   background: white;
   border: 0px;
