--- a/web/dashboard/includes/search.html
+++ b/web/dashboard/includes/search.html
@@ -2,12 +2,8 @@
   <div class="fields">
     <div class="four wide function field">
       <div class="field">
-        <label for="searchTeam">Members</h3>
+        <label for="searchTeam">Members</label>
         <select title="Members that will conduct the search" multiple class="team searcher container" style="width: 100%" id="searchTeam"></select>
-      </div>
-      <div class="field">
-        <label for="searchCategories">Apply categories</label>
-        <input title="Categories that will be applied to found items, comma seperated" id="searchCategories" />
       </div>
     </div>
     <div class="four wide function field">
@@ -16,6 +12,10 @@
         <input title="Search term or URI for search members" id="searchInput" style="width: 100%" />
       </div>
       <div class="field">
+        <label for="searchCategories">Apply categories</label>
+        <input title="Categories that will be applied to found items, comma seperated" id="searchCategories" />
+      </div>
+      <div class="hidden field">
         <label for="searchContinue">Continue searching</label>
         <select id="searchContinue" title="when should search paths stop">
           <option value="0">link only</option>
@@ -49,5 +49,7 @@
         <button class="ui mini load search button"><i class="ellipsis horizontal icon"></i></button>
       </div>
     </div>
+  </div>
+  <div class="ui hidden search message" style="height: 8em; overflow: auto">
   </div>
 </div>
