--- a/web/dashboard/includes/search.html
+++ b/web/dashboard/includes/search.html
@@ -43,7 +43,7 @@
         <input title="Schedule the search" type="checkbox" id="scheduleSearch" /> <label for="scheduleSearch">Schedule</label> <span id="scheduleInput" style="display: none"><input class="cron search" style="display: none" /></span>
       </div>
       <div class="two inline fields">
-        <label for="searchSave">Name</label>
+        <label for="searchName">Name</label>
         <input title="Save name for the search" id="searchName" style="width: 60%" />
         <button class="ui mini save search button"><i class="save icon"></i></button>
         <button class="ui mini load search button"><i class="ellipsis horizontal icon"></i></button>
